--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  get_it: ^7.3.0
   go_router: ^6.5.6
   google_fonts: ^4.0.3
 
